# cs-data-ingestion

./: .flake8  .gitignore  LICENSE  Makefile  README.md  compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml
airflow/dags/: dags.py  utils.py
docker/: compose.yml
docker/env.d/: postgresql.env
env.d/: airflow.env  frontend.env
frontend/: Dockerfile  Dockerfile-dev  __init__.py  config.py  constants.py  requirements.txt  wsgi.py
frontend/controllers/: healthcheck.py  render.py  upload.py
frontend/interactors/: plot.py
frontend/static/: report.csv.example
frontend/templates/: images.html  upload.html
terraform/: main.tf  variables.tf
